--- a/WooCommerce/Classes/ViewRelated/ReusableViews/TwoLineLabelView.xib
+++ b/WooCommerce/Classes/ViewRelated/ReusableViews/TwoLineLabelView.xib
@@ -13,7 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TwoLineLabelView" customModule="WooCommerce" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="62"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="138"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USPS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jXj-nd-I36">
@@ -28,26 +28,37 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hKB-Xr-d6L">
+                    <rect key="frame" x="0.0" y="63" width="375" height="68"/>
+                    <state key="normal" title="Button"/>
+                    <connections>
+                        <action selector="actionWasPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="8m9-4g-Sry"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="jXj-nd-I36" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="5yk-vX-oRw"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Tdd-WQ-M6u" secondAttribute="bottom" constant="7" id="LgX-Fc-am7"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="hKB-Xr-d6L" secondAttribute="trailing" id="ACy-Pr-N9A"/>
                 <constraint firstItem="Tdd-WQ-M6u" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Sjm-i0-Yif"/>
                 <constraint firstItem="Tdd-WQ-M6u" firstAttribute="top" secondItem="jXj-nd-I36" secondAttribute="bottom" constant="8" id="Ujb-Ro-Aag"/>
                 <constraint firstItem="jXj-nd-I36" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="5" id="UnC-H4-Uag"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Tdd-WQ-M6u" secondAttribute="trailing" id="a4Y-dt-NSV"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="hKB-Xr-d6L" secondAttribute="bottom" constant="7" id="gCJ-oR-PVU"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="jXj-nd-I36" secondAttribute="trailing" id="hwI-tl-iq5"/>
+                <constraint firstItem="hKB-Xr-d6L" firstAttribute="top" secondItem="Tdd-WQ-M6u" secondAttribute="bottom" constant="8" id="mX1-5o-0HY"/>
+                <constraint firstItem="hKB-Xr-d6L" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="qYl-o0-6fu"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="actionButton" destination="hKB-Xr-d6L" id="83y-IZ-V51"/>
                 <outlet property="bottomLine" destination="Tdd-WQ-M6u" id="eDw-FD-5EE"/>
                 <outlet property="topLine" destination="jXj-nd-I36" id="3zV-xF-bon"/>
             </connections>
-            <point key="canvasLocation" x="117.59999999999999" y="91.754122938530742"/>
+            <point key="canvasLocation" x="117.59999999999999" y="91.304347826086968"/>
         </view>
     </objects>
 </document>
