--- a/WooCommerce/Classes/ViewRelated/Orders/Cells/OrderTrackingTableViewCell.xib
+++ b/WooCommerce/Classes/ViewRelated/Orders/Cells/OrderTrackingTableViewCell.xib
@@ -13,62 +13,52 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="188" id="KGk-i7-Jjw" customClass="OrderTrackingTableViewCell" customModule="WooCommerce" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="331" height="188"/>
+            <rect key="frame" x="0.0" y="0.0" width="331" height="142"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="331" height="187.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="331" height="141.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="doy-im-dMH">
-                        <rect key="frame" x="16" y="16" width="299" height="154"/>
-                        <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="UBp-2C-MWu">
-                                <rect key="frame" x="0.0" y="0.0" width="299" height="72"/>
-                            </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l69-YR-SYD">
-                                <rect key="frame" x="0.0" y="86" width="299" height="68"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rng-8C-l5l">
-                                        <rect key="frame" x="0.0" y="0.0" width="299" height="68"/>
-                                        <state key="normal" title="Button"/>
-                                        <connections>
-                                            <action selector="trackWasPressed" destination="KGk-i7-Jjw" eventType="touchUpInside" id="qD4-fQ-LUr"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="Rng-8C-l5l" secondAttribute="trailing" id="N9O-CJ-oeT"/>
-                                    <constraint firstItem="Rng-8C-l5l" firstAttribute="top" secondItem="l69-YR-SYD" secondAttribute="top" id="SDh-nv-Grv"/>
-                                    <constraint firstItem="Rng-8C-l5l" firstAttribute="leading" secondItem="l69-YR-SYD" secondAttribute="leading" id="SO8-Jh-GxZ"/>
-                                    <constraint firstAttribute="bottom" secondItem="Rng-8C-l5l" secondAttribute="bottom" id="VHR-Mb-ZV1"/>
-                                </constraints>
-                            </view>
-                        </subviews>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="l69-YR-SYD" secondAttribute="trailing" id="0cv-Iu-JDw"/>
-                            <constraint firstAttribute="trailing" secondItem="UBp-2C-MWu" secondAttribute="trailing" id="65H-Bn-GvV"/>
-                            <constraint firstItem="l69-YR-SYD" firstAttribute="leading" secondItem="doy-im-dMH" secondAttribute="leading" id="C6k-Bi-Xlw"/>
-                            <constraint firstAttribute="bottom" secondItem="l69-YR-SYD" secondAttribute="bottom" id="aWP-uo-O1Y"/>
-                            <constraint firstItem="UBp-2C-MWu" firstAttribute="top" secondItem="doy-im-dMH" secondAttribute="top" id="hSQ-Fw-mvj"/>
-                            <constraint firstItem="UBp-2C-MWu" firstAttribute="leading" secondItem="doy-im-dMH" secondAttribute="leading" id="r16-Ym-UAD"/>
-                        </constraints>
-                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kb4-pd-pEb">
+                        <rect key="frame" x="16" y="8" width="299" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q04-tu-Hwj">
+                        <rect key="frame" x="16" y="63" width="299" height="70"/>
+                        <state key="normal" title="Button"/>
+                        <connections>
+                            <action selector="actionButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="vJf-Pe-OWy"/>
+                        </connections>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Tp-fv-Tte">
+                        <rect key="frame" x="16" y="37" width="299" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="doy-im-dMH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="FU5-2I-dYE"/>
-                    <constraint firstItem="doy-im-dMH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="LI4-BV-8Hu"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="doy-im-dMH" secondAttribute="bottom" constant="7" id="eLT-Tb-bZ4"/>
-                    <constraint firstItem="doy-im-dMH" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="ePe-4V-y2k"/>
+                    <constraint firstItem="5Tp-fv-Tte" firstAttribute="top" secondItem="kb4-pd-pEb" secondAttribute="bottom" constant="8" id="2cK-8W-y1H"/>
+                    <constraint firstItem="5Tp-fv-Tte" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="4Jy-2O-zNL"/>
+                    <constraint firstItem="kb4-pd-pEb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="5ks-bg-P4U"/>
+                    <constraint firstAttribute="trailing" secondItem="5Tp-fv-Tte" secondAttribute="trailing" constant="16" id="KFg-sL-g39"/>
+                    <constraint firstItem="q04-tu-Hwj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Ocs-VK-1Cw"/>
+                    <constraint firstItem="q04-tu-Hwj" firstAttribute="top" secondItem="5Tp-fv-Tte" secondAttribute="bottom" constant="5" id="QLS-Yr-HGk"/>
+                    <constraint firstAttribute="trailing" secondItem="kb4-pd-pEb" secondAttribute="trailing" constant="16" id="f0f-P8-QnX"/>
+                    <constraint firstAttribute="trailing" secondItem="q04-tu-Hwj" secondAttribute="trailing" constant="16" id="qfe-h5-QTj"/>
+                    <constraint firstItem="kb4-pd-pEb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="qlg-b9-xYQ"/>
+                    <constraint firstAttribute="bottom" secondItem="q04-tu-Hwj" secondAttribute="bottom" constant="8" id="rTX-tE-hM3"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="actionContainerView" destination="l69-YR-SYD" id="bMG-f7-iEF"/>
-                <outlet property="trackButton" destination="Rng-8C-l5l" id="dQD-Xj-aV0"/>
-                <outlet property="verticalStackView" destination="UBp-2C-MWu" id="AUM-Xi-GY1"/>
+                <outlet property="actionButton" destination="q04-tu-Hwj" id="yfI-P3-JyX"/>
+                <outlet property="bottomLine" destination="5Tp-fv-Tte" id="0Kp-r9-HEk"/>
+                <outlet property="topLine" destination="kb4-pd-pEb" id="eC2-Xc-JAH"/>
             </connections>
-            <point key="canvasLocation" x="39.5" y="126"/>
+            <point key="canvasLocation" x="39.200000000000003" y="125.93703148425789"/>
         </tableViewCell>
     </objects>
 </document>
